--- a/src/modules/projects/data/projects_normalized.json
+++ b/src/modules/projects/data/projects_normalized.json
@@ -27,9 +27,10 @@
     "category": "Grupos Electrógenos / Transferencias",
     "description": "Suministro de planta eléctrica tipo 110A4-44T trifásica con descarga a tierra, potencia de 100 kva en modo StandBy nominales hasta 1000 metros para el equipo fijo de ingenieros por intermedio de la CENAC.",
     "images": [
+            "uploads/2022/01/WhatsApp-Image-2021-09-29-at-15.39.10-2.jpeg",
       "uploads/2022/01/WhatsApp-Image-2021-09-27-at-09.03.03.jpeg",
       "uploads/2022/01/WhatsApp-Image-2021-09-27-at-09.03.15-4.jpeg",
-      "uploads/2022/01/WhatsApp-Image-2021-09-29-at-15.39.10-2.jpeg",
+
       "uploads/2022/01/WhatsApp-Image-2021-09-30-at-14.09.58.jpeg",
       "uploads/2022/01/WhatsApp-Image-2021-09-30-at-14.10.13-3.jpeg"
     ],
@@ -81,8 +82,9 @@
     "category": "Transferencias",
     "description": "Actualizar la transferencia automática red - planta perteneciente a la carga actual de la Aerocivil en el aeropuerto de Barrancabermeja.",
     "images": [
+            "uploads/2022/02/20211118_150928-scaled.jpg",
       "uploads/2022/02/20211118_122958-scaled.jpg",
-      "uploads/2022/02/20211118_150928-scaled.jpg",
+
       "uploads/2022/02/20211217_114241-scaled.jpg",
       "uploads/2022/02/20211217_114332-scaled.jpg",
       "uploads/2022/02/20211217_114413-scaled.jpg",
@@ -124,13 +126,13 @@
     "category": "Baterías",
     "description": "Suministro de BANCOS DE BATERÍAS de 1500 Ah, tipo OPZs, 48 VDC, de acuerdo con las especificaciones técnicas.",
     "images": [
+            "uploads/2022/01/20211026_074520-1-scaled.jpg",
       "uploads/2022/01/WhatsApp-Image-2021-12-13-at-11.04.54.jpeg",
       "uploads/2022/01/WhatsApp-Image-2021-12-13-at-11.02.07.jpeg",
       "uploads/2022/01/WhatsApp-Image-2021-12-13-at-10.59.41.jpeg",
-      "uploads/2022/01/WhatsApp-Image-2021-12-13-at-09.14.32-1.jpeg",
-      "uploads/2022/01/WhatsApp-Image-2021-12-13-at-09.14.31.jpeg",
-      "uploads/2022/01/WhatsApp-Image-2021-10-05-at-11.22.50.jpeg",
-      "uploads/2022/01/20211026_074520-1-scaled.jpg"
+
+      "uploads/2022/01/WhatsApp-Image-2021-10-05-at-11.22.50.jpeg"
+
     ],
     "slug": "comando-baterias",
     "date": "2022-01-29"
@@ -198,9 +200,7 @@
     "category": "Energía Solar",
     "description": "Suministro e Instalación de equipos fotovoltaicos de doble uso, en diferentes veredas del Huila con el fin de apoyar la conservación y restauración de zonas de gran importancia ambiental para Parques Naturales Nacionales - Nevado del Huila y su zona de influencia.",
     "images": [
-
-      "uploads/2020/12/1-2.jpg",
-      "uploads/2020/12/4-2.jpg",
+      "uploads/2020/12/16.jpg",
       "uploads/2020/12/6-2.jpg",
       "uploads/2020/12/7-1.jpg",
       "uploads/2020/12/8-1.jpg",
@@ -210,7 +210,6 @@
       "uploads/2020/12/13-1.jpg",
       "uploads/2020/12/14-1.jpg",
       "uploads/2020/12/15.jpg",
-      "uploads/2020/12/16.jpg",
       "uploads/2020/12/17.jpg"
     ],
     "slug": "parques-nacionales-naturales",
@@ -298,13 +297,14 @@
     "category": "Baterías",
     "description": "Suministro, instalación y pruebas de Banco de Baterias para UPS de 80kVA",
     "images": [
+            "uploads/2019/12/SAM_3084.jpg",
       "uploads/2019/12/SAM_3018.jpg",
       "uploads/2019/12/SAM_3019.jpg",
       "uploads/2019/12/SAM_3020.jpg",
       "uploads/2019/12/SAM_3022.jpg",
       "uploads/2019/12/SAM_3046.jpg",
       "uploads/2019/12/SAM_3083.jpg",
-      "uploads/2019/12/SAM_3084.jpg",
+
       "uploads/2019/12/SAM_3088.jpg",
       "uploads/2019/12/SAM_3108.jpg",
       "uploads/2019/12/SAM_3118.jpg"
@@ -320,7 +320,7 @@
     "category": "Baterías",
     "description": "Suministro, instalación y pruebas de Banco de Baterias para UPS en el Hospital de Neiva",
     "images": [
-      "uploads/2019/12/IMG-20170906-WA0016-1.jpeg",
+      
       "uploads/2019/12/1-5.jpg",
       "uploads/2019/12/SAM_3083-scaled.jpg",
       "uploads/2019/12/20170907_090740.jpg",
@@ -393,7 +393,6 @@
       "uploads/2019/12/1-4.jpg",
       "uploads/2019/12/2-2.jpg",
       "uploads/2019/12/3-3.jpg",
-      "uploads/2019/12/SAM_3174.jpg",
       "uploads/2019/12/SAM_3188.jpg",
       "uploads/2019/12/SAM_3217.jpg",
       "uploads/2019/12/SAM_3227.jpg",
@@ -412,8 +411,9 @@
     "category": "Energía Solar",
     "description": "Suministro e instalación de Kits Solares, para generación de energía limpia en Instituciones Educativas e Instituciones de Salud de Boyaca.",
     "images": [
+            "uploads/2019/12/4-1.jpg",
       "uploads/2019/12/7-1.jpg",
-      "uploads/2019/12/4-1.jpg",
+
       "uploads/2019/12/3-2.jpg",
       "uploads/2019/12/1-3.jpg",
       "uploads/2019/12/5-1.jpg",
